kdevplatform (0.9.95-1) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * Update *.install files:
    - libkdevplatformtestshell renamed to libkdevplatformtests.

 -- Fathi Boudra <fabo@debian.org>  Thu, 02 Jul 2009 14:21:12 +0200

kdevplatform (0.9.94-1) unstable; urgency=low

  * New upstream release.
  * Replace liboost1.37-dev build dependency by libboost-serialization-dev.
    (Closes: #531111)
  * Bump Standards-Version to 3.8.2 (no changes needed).

 -- Fathi Boudra <fabo@debian.org>  Mon, 15 Jun 2009 11:42:21 +0200

kdevplatform (0.9.93-1) unstable; urgency=low

  * New upstream release.
  * Update debian/kdevplatform-dev.install: add debugger include files.
  * Update debian/kdevplatform1-libs.install: add kdevcodegen licenses files.
  * Add liboost1.37-dev build dependency: It's needed to get the class browser
    plugin. We can't use boost 1.38 as it isn't supported yet.

 -- Fathi Boudra <fabo@debian.org>  Sun, 24 May 2009 13:13:25 +0200

kdevplatform (0.9.92-1) unstable; urgency=low

  * New upstream release.
  * Bump Standards-Version to 3.8.1. No changes needed.
  * Move kdevplatform-dbg package to debug section.

 -- Fathi Boudra <fabo@debian.org>  Mon, 20 Apr 2009 11:09:11 +0200

kdevplatform (0.9.91-1) experimental; urgency=low

  * Initial release (Closes: #509432).

 -- Fathi Boudra <fabo@debian.org>  Wed, 04 Mar 2009 18:11:09 +0100